# immoeliza-airflow

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: immoeliza_pipeline_dag.py  smoke_dag.py
airflow/dags/tasks/: clean_for_analysis.py  clean_for_training.py  compact_details.py  fetch_details.py  scrape_apartments.py  scrape_houses.py  store_raw.py  train_regression.py
airflow_home/: airflow.cfg  airflow.db
analytics/: immoeliza.duckdb
models/: rf_price_20250908_203852_metrics.json  rf_price_20250908_204415_metrics.json
scripts/: af_kill.sh
src/immoeliza/: config.py  io_paths.py
src/immoeliza/analytics/: cleaning.py  to_duckdb.py
src/immoeliza/cleaning/: analysis_clean.py  sanity_checks.py  training_clean.py
src/immoeliza/modeling/: evaluate.py  features.py  registry.py  train.py  train_regression.py
src/immoeliza/scraping/: .py  apartments.py  common.py  consolidate.py  details.py  details_compact.py  houses.py  html_fallback.py
src/immoeliza/scraping/legacy/: immovlan_details_scraper.py  immovlan_url_scraper.py  patch_driver.py
webui/: app.py  predict_helper.py
